@@ -629,18 +629,31 @@ lndirs() {
 
 # Regenerates auto* files; most importantly, pulls in the Cygwin libtool
 cygautoreconf() {
+	local d;
 	local f;
 	local notool;
 	local tool;
+	local ac_subdirs;
+	local configure_ac;
+	local config_h;
+
+	if [ -f configure.ac ]
+	then
+		configure_ac="configure.ac";
+	elif [ -f configure.in ]
+	then
+		configure_ac="configure.in";
+	else
+		error "Could not find configure.ac or configure.in";
+	fi
+
+	ac_subdirs="$(grep AC_CONFIG_SUBDIRS ${configure_ac} | sed 's!AC_CONFIG_SUBDIRS(\(.*\))!\1!g')"
 
 	# Automake will exit if these are not present
 	# dodoc won't install these, however, since they will be empty
-	for f in AUTHORS COPYING ChangeLog INSTALL NEWS README
+	for d in . ${ac_subdirs}
 	do
-		if [ ! -f ${f} ]
-		then
-			touch ${f};
-		fi
+		touch ${d}/{AUTHORS,COPYING,ChangeLog,INSTALL,NEWS,README};
 	done
 
 	# These can be overwritten by automake, so we back them up now and
@@ -654,7 +667,7 @@ cygautoreconf() {
 	then
 		check_prog_req autoconf-2.13 autoconf2.1
 
-		if grep -q "^A[CM]_PROG_LIBTOOL" ${S}/configure.in
+		if grep -q "^A[CM]_PROG_LIBTOOL" ${S}/${configure_ac}
 		then
 			warning "libtool1.5 is incompatible with autoconf-2.13";
 		fi
@@ -680,10 +693,15 @@ cygautoreconf() {
 		/usr/bin/autoreconf-2.5x --install --force --verbose || error "autoreconf-2.5x failed"
 	fi	
 
-	if [ -f config.h.in ]
-	then
-		touch config.h.in
-	fi
+	for d in . ${ac_subdirs}
+	do
+		config_h="$(grep 'A[CM]_CONFIG_HEADERS*' ${d}/${configure_ac} | sed -e 's!A[CM]_CONFIG_HEADERS*(\[*\(.*\))!\1!g' -e 's!\]*!!g')";
+
+		if [ -n "${config_h}" ]
+		then
+			touch ${d}/${config_h}.in;
+		fi
+	done
 
 	for f in COPYING INSTALL
 	do
@@ -1223,7 +1241,7 @@ pkg_diff() {
 	# GNOME miscellaneous
 	if [ "${PN}" != "gnome-doc-utils" ]
 	then
-		default_excludes+=" -x gnome-doc-utils.make";
+		default_excludes+=" -x gnome-doc-utils.make -x gnome-doc-utils.m4";
 	fi
 
 	if [ "${PN}" != "intltool" ]
